# chimera

./: .gitignore  Cargo.toml  README.md
.github/workflows/: chatgpt-code-reviewer.yml  rust-tests-runner.yml  rust.yml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  ast_passes.rs  collection.rs  container.rs  container_ref.rs  control_flow.rs  delimited.rs  errors.rs  expression.rs  function.rs  impl_block.rs  indexing.rs  jump.rs  lang_elems.rs  let_binding.rs  lib.rs  literal.rs  loops.rs  mutable.rs  operation.rs  parameter.rs  return_stmt.rs  self_ref.rs  semi.rs  statement.rs  structure.rs  tensor.rs  tensor_struct.rs  types.rs  variable.rs
crates/chimera/: Cargo.toml
crates/chimera/src/: main.rs
crates/hir/: Cargo.toml
crates/hir/src/: builder.rs  climbing.rs  container_ref.rs  context.rs  control_flow.rs  definition_allocator.rs  delimited.rs  errors.rs  expression.rs  function.rs  hash_cons.rs  hir.rs  impl_block.rs  index_types.rs  indexing.rs  jump.rs  let_binding.rs  lib.rs  literal.rs  loops.rs  metadata.rs  mutable.rs  operation.rs  parameter.rs  purity.rs  resolution.rs  return_stmt.rs  scope.rs  self_ref.rs  semi.rs  span.rs  statement.rs  structure.rs  tensor.rs  types.rs  variable.rs
crates/hir/src/collection/: block.rs  buffer.rs  builtin.rs  canonical.rs  contract.rs  expr.rs  fusion.rs  layout.rs  meta.rs  min_max.rs  mod.rs  op.rs  shape.rs  storage.rs  tensor.rs  uninit.rs
crates/hir/src/container/: block.rs  canonical.rs  layout.rs  meta.rs  mod.rs  op.rs  tensor.rs  uninit.rs
crates/hir/src/typing/: mod.rs
crates/hir/src/typing/hindley_milner/: expression.rs  inference.rs  mod.rs  scheme.rs  statement.rs  store.rs  types.rs
crates/hir_macro/: Cargo.toml
crates/hir_macro/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: bitset.rs  errors.rs  lexer.rs  lib.rs  token_kind.rs  token_type.rs
crates/lexer/test_programs/: malformed_int.chi
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  collections.rs  conditionals.rs  containers.rs  cst.rs  delimited.rs  errors.rs  event.rs  event_holder.rs  expression.rs  func.rs  hir.rs  implements.rs  language.rs  let_binding.rs  lib.rs  loops.rs  marker.rs  operator.rs  parenthesised.rs  parse.rs  parse_behaviors.rs  parser.rs  recovery.rs  s_expression.rs  sink.rs  statement.rs  structure.rs  syntax.rs  var_def.rs
crates/parser/test_programs/errd/: malformed_var_defs.chi
crates/parser/test_programs/ok/: exprs.chi  stmts.chi
crates/scoped_macro/: Cargo.toml
crates/scoped_macro/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: anchor.rs  bitset.rs  context.rs  language.rs  lib.rs  syntax.rs  syntax_kind.rs
scripts/: setup-git-hooks.sh  test-workflow.sh  test.sh
scripts/git-hooks/: changed_files_in_branch.zsh  pre-commit.zsh  pre-push.zsh
src/: bitset.rs  event.rs  event_holder.rs  language.rs  lexer.rs  lexer_bkp.rs  lib.rs  main.rs  marker.rs  match_finder.rs  match_validation.rs  match_validator.rs  parser.rs  program_text.rs  range_indices.rs  s_expression.rs  set.rs  sink.rs  trie.rs  validator.rs
