[package]
name = "chimera"
description = "Chimera - a programming language that is a collage of interesting (to me) capabilities from various languages"
version = "0.1.0"
rust-version = "1.84.0"
edition = "2021"
readme = "README.md"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
logos = "0.15.0"
rowan = "0.16.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.11"
smol_str = "0.3.2"
drop_bomb = "0.1.5"

[dev-dependencies]
parameterized_test = "0.2.1"
# not sure if I need this
expect-test = "1.5.1"
