[package]
name = "ast"
version = "0.1.0"
edition = "2024"

[dependencies]
syntax = { path = "../syntax" }
parser = { path = "../parser" }

miette = { version = "7.5.0", features = ["fancy"] }
smol_str = "0.3.2"
thiserror = "2.0.11"
thin-vec = "0.2.13"
smallvec = "1.14.0"

[dev-dependencies]
parameterized_test = "0.2.1"