[package]
name = "ast"
version = "0.1.0"
edition = "2024"

[dependencies]
syntax = { path = "../syntax" }
parser = { path = "../parser" }

lazy_static.workspace = true
miette.workspace = true
num-traits.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thin-vec.workspace = true
thiserror.workspace = true

[dev-dependencies]
parameterized_test = "0.2.1"
