[package]
name = "hir"
version = "0.1.0"
edition = "2024"

[dependencies]
ast  = { path = "../ast" }
syntax = { path = "../syntax" }
hir_macro = { path = "../hir_macro" }  # adjust path as needed

la-arena = "0.3.1"
miette = { version = "7.5.0", features = ["fancy"] }
patricia_tree = "0.9.0"
rust_decimal = "1.37"
smallvec = "1.14.0"
smol_str = "0.3.2"
thin-vec = "0.2.13"
thiserror = "2.0.11"

[dev-dependencies]
parser = { path = "../parser" }
parameterized_test = "0.2.1"