[package]
name = "hir"
version = "0.1.0"
edition = "2024"

[dependencies]
ast  = { path = "../ast" }
syntax = { path = "../syntax" }
hir_macro = { path = "../hir_macro" }  # adjust path as needed

la-arena.workspace = true
rustc-hash.workspace = true
miette.workspace = true
patricia_tree.workspace = true
rust_decimal.workspace = true
smallvec.workspace = true
smol_str.workspace = true
thin-vec.workspace = true
thiserror.workspace = true

[dev-dependencies]
parser = { path = "../parser" }
parameterized_test = "0.2.1"
