[package]
name = "lexer"
version = "0.1.0"
edition = "2024"
description = "Chimera's lexer"
readme = "README.md"

[dependencies]
logos = "0.15.0"
miette = { version = "7.5.0", features = ["fancy"] }
smol_str = "0.3.2"
thiserror = "2.0.11"
thin-vec = "0.2.13"

[dev-dependencies]
parameterized_test = "0.2.1"
