[package]
name = "lexer"
version = "0.1.0"
edition = "2024"
description = "Chimera's lexer"
readme = "README.md"

[dependencies]
logos.workspace = true
miette.workspace = true
smol_str.workspace = true
thiserror.workspace = true
thin-vec.workspace = true

[dev-dependencies]
parameterized_test = "0.2.1"
