[package]
name = "parser"
version = "0.1.0"
edition = "2024"
description = "Chimera's parser"

[dependencies]
lexer = { path = "../lexer" }
syntax = { path = "../syntax" }

drop_bomb.workspace = true
la-arena.workspace = true
miette.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rowan.workspace = true
smol_str.workspace = true
thin-vec.workspace = true
thiserror.workspace = true

[dev-dependencies]
parameterized_test = "0.2.1"
expect-test = "1.5.1"
